syntax = "proto3";

package com.smartfleet.telemetry;

option java_package = "com.smartfleet.common.proto";
option java_outer_classname = "VehicleTelemetryProto";
option java_multiple_files = true;

message VehicleTelemetryReading {
  string reading_id = 1;
  string vehicle_id = 2;
  int32 fleet_id = 3;
  float speed_kmh = 4;
  float fuel_level_percent = 5;
  float engine_temp_c = 6;
  double gps_lat = 7;
  double gps_long = 8;
  bool is_anomaly = 9;
  int64 timestamp = 10;
  int64 ingestion_timestamp = 11;
  DeviceStatus device_status = 12;
  AnomalyType anomaly_type = 13;
}

enum DeviceStatus {
  DEVICE_STATUS_UNKNOWN = 0;
  DEVICE_STATUS_OK = 1;
  DEVICE_STATUS_WARNING = 2;
  DEVICE_STATUS_ERROR = 3;
}

enum AnomalyType {
  ANOMALY_TYPE_NONE = 0;
  ANOMALY_TYPE_SPEEDING = 1;
  ANOMALY_TYPE_SUDDEN_STOP = 2;
  ANOMALY_TYPE_ENGINE_OVERHEAT = 3;
  ANOMALY_TYPE_LOW_FUEL = 4;
  ANOMALY_TYPE_DEVICE_ERROR = 5;
  ANOMALY_TYPE_GPS_ANOMALY = 6;
}

message VehicleTelemetryBatch {
  repeated VehicleTelemetryReading readings = 1;
  int64 batch_timestamp = 2;
  string batch_id = 3;
  int32 total_count = 4;
  int32 anomaly_count = 5;
}

message FleetDailySummary {
  string summary_id = 1;
  int32 fleet_id = 2;
  string fleet_name = 3;
  string record_date = 4;
  double total_distance_km = 5;
  double avg_speed_kmh = 6;
  double fuel_consumed_liters = 7;
  int32 anomaly_count = 8;
  int32 active_vehicles = 9;
  int64 generated_at = 10;
  repeated VehicleDailySummary vehicle_summaries = 11;
}

message VehicleDailySummary {
  string vehicle_id = 1;
  double distance_km = 2;
  double avg_speed_kmh = 3;
  double max_speed_kmh = 4;
  double fuel_consumed_liters = 5;
  double avg_engine_temp_c = 6;
  double max_engine_temp_c = 7;
  int32 anomaly_count = 8;
  int32 total_readings = 9;
  double driving_hours = 10;
  GpsLocation start_location = 11;
  GpsLocation end_location = 12;
}

message GpsLocation {
  double latitude = 1;
  double longitude = 2;
  int64 timestamp = 3;
}

message VehicleAlert {
  string alert_id = 1;
  string vehicle_id = 2;
  int32 fleet_id = 3;
  AnomalyType alert_type = 4;
  string description = 5;
  double severity_score = 6;
  int64 alert_timestamp = 7;
  GpsLocation location = 8;
  VehicleTelemetryReading triggering_reading = 9;
  bool acknowledged = 10;
  int64 acknowledged_at = 11;
  string acknowledged_by = 12;
}

message FleetAnalytics {
  int32 fleet_id = 1;
  string time_period = 2;
  string period_start = 3;
  string period_end = 4;
  double total_distance_km = 5;
  double avg_fleet_speed_kmh = 6;
  double total_fuel_consumed_liters = 7;
  double fuel_efficiency_km_per_liter = 8;
  int32 total_vehicles = 9;
  int32 active_vehicles = 10;
  double fleet_utilization_percent = 11;
  double avg_daily_driving_hours = 12;
  int32 total_anomalies = 13;
  int32 speeding_incidents = 14;
  int32 sudden_stop_incidents = 15;
  int32 engine_overheat_incidents = 16;
  double safety_score = 17;
  repeated DailyTrend daily_trends = 18;
}

message DailyTrend {
  string date = 1;
  double distance_km = 2;
  double avg_speed_kmh = 3;
  double fuel_consumed_liters = 4;
  int32 anomaly_count = 5;
  int32 active_vehicles = 6;
}

// ===============================
// DAILY DASHBOARD REPORT MESSAGES
// ===============================

message DailyAvgSpeedByFleet {
  int32 fleet_id = 1;
  string fleet_name = 2;
  string date = 3;
  double avg_speed = 4;
  double max_speed = 5;
  double min_speed = 6;
  int32 vehicle_count = 7;
  int64 total_readings = 8;
}

message DailyAvgSpeedByFleetList {
  repeated DailyAvgSpeedByFleet items = 1;
}

message DailyFuelConsumptionByFleet {
  int32 fleet_id = 1;
  string fleet_name = 2;
  string date = 3;
  double total_fuel_consumed = 4;
  double avg_fuel_efficiency = 5;
  double total_distance = 6;
  int32 vehicle_count = 7;
  double avg_fuel_level = 8;
}

message DailyFuelConsumptionByFleetList {
  repeated DailyFuelConsumptionByFleet items = 1;
}

message DailyAnomalyCounts {
  int32 fleet_id = 1;
  string fleet_name = 2;
  string date = 3;
  int32 total_anomalies = 4;
  int32 speeding_count = 5;
  int32 engine_overheat_count = 6;
  int32 sudden_stop_count = 7;
  int32 low_fuel_count = 8;
  int32 device_error_count = 9;
  double anomaly_rate = 10;
  int64 total_readings = 11;
}

message DailyAnomalyCountsList {
  repeated DailyAnomalyCounts items = 1;
}



